@@ -728,7 +728,12 @@ cis.vs.trans.classification <- function(hits=jma.cojo, panel=inf1, id="uniprot",
 # get the breakdown of cis vs trans per protein
 # sapply(list.by.prot, function(x) table(with(x, cis.trans)))
 
-  invisible(list(data=hits_panel,table=with(hits_panel,table(p.gene, cis.trans))))
+  x <- with(hits_panel,table(p.gene, cis.trans))
+  total <- apply(x,1,sum)
+  xx <- rbind(x,total)
+  total <- apply(xx,2,sum)
+  x <- cbind(xx,total)
+  invisible(list(data=hits_panel,table=x))
 }
 
 cnvplot <- function(data=cnv)
