@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.1-23
+08-05-2019	Add column and row totals for cis.vs.trans.classification
 02-05-2019	Change circos.cis.vs.trans.plot so the chords are directional and two-coloured
 22-01-2019	Revise cnvplot to handle Y chromosome
 20-12-2018	Add circos.mhtplot, revise cnvplot and employ gc.lambda in qqunif.Rd
